--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "check-word": "^1.1.0",
     "express": "^4.16.2",
+    "mysql": "^2.15.0",
     "socket.io": "^2.0.4",
     "timer-stopwatch": "^0.2.0"
   }
